--- a/31discussion.tex
+++ b/31discussion.tex
@@ -1,12 +1,29 @@
 \section*{Discussion}
-Systems biology studies generate many data files for the simulation of biological systems. These data files can be stored in COMBINE archives, standardized containers that facilitate the exchange of information from simulation studies \cite{Bergmann.2014}, such as the fully-featured COMBINE archive described by Scharm \textit{et al.} \cite{combine}.
 
-While we were able to re-create some (sub-) figures of the original paper using the model selected for this COMBINE archive, we encountered several problems. These will be addressed in separate GitHub issues for future reference (maybe for the authors of the original paper).
+\subsection*{Answer to study questions}
+This study investigated the feasibility to generate a \ac{combine} archive in a agile working environment and the usability of this format to reproduce a dynamic pathway modeling study of the JAK/STAT5 pathway \cite{bachmannmodel}. We independently built a completely publicly traceable, fully documented and agile working environment in GitHub from scratch. In this environment, our results show that the generation of a fully featured \ac{combine} archive is feasible and can be performed within two weeks. A broad set of tools to visualize and simulate biological modeling data was evaluated and tested. Furthermore, we could effectively reproduce the vast majority of the results of the original work. 
 
-In reference to our study questions we could show that an agile working environment enables a comprehensive co-working structure in an educational setting. Here we could effectively develop a fully-featured \ac{combine} archive and reproduce a vast majority of the results given in the original work. The strength of our work beside the technical and documental tasks is to point our missing data or variables in the original work. Due to restricted course duration the main shortcoming of our study is that we were not able to resolve those issues within the project duration.
+\subsection*{Strengths and weaknesses of the study}
+Several limitations of our study should be considered. It was conducted for a limited duration of only two weeks due to the educational character. Hence, we could only focus our work on generating a \ac{combine} archive of a single study. Furthermore, the limited time was one of the reasons why not all data to reproduce the figures could be obtained. In addition, several parameters required to reproduce the full extend of individual plots were not included in the original data itself and therefore could not be reproduced. We will reach out to the authors to ask for the missing parameters.
+Also some technical issues hindered a barrier-free assembly of the archive. The \textit{CombineArchiveWeb} interface did not allow the XML reports from the validations to be be uploaded. Due to restricted course duration, another shortcoming of our study is that we were not able to resolve those issues within the project duration.
 
-Given the vast extend of research and consecutive data in the field of system biology we could show that the assembly of a \ac{combine} archive is feasible, achievable and can be documented in a reproducible way with open source tools. This may be of utter importance for the future approach to systems medicine results. 
+\subsection*{Results in relation to other studies}
+Our observations complement the report by Scharm \& Waltemath \cite{combine} that highlights the feasibility of \ac{combine} archives to reproduce results from modeling studies \cite{calzone2007dynamical}. In comparison to this study, we extended not only the amount of generated simulation descriptions and SBGN compliant figures, but also tested and compared different available tools as outlined in the results section. Finally, we fully and comprehensively documented our work in a GitHub Repository under a CC0-1.0 License, enabling and inviting interested colleagues to re-use and share our work.
 
-Yet some questions remain unsolved at this time. We aimed to provide our SBGN model in a variety of formats to allow recurrence on the substitute files when the primary files are not applicable in a specific future application. Finally, we were able to provide different SBGN-ML 0.2 codes as well as a GraphML version of our model. The CellDesigner export did not work and also we provided no SBGN-ML 0.3 because we were not able to validate this with at least one other tool than Newt editor. Unfortunately, we were not able to further investigate the platform specific problems with exchange formats in detail as we experienced them, but provide a documentation for the community. During the time of our project, the CellDesigner export from Newt editor is already adressed in the discussion to an existing issue on GitHub (https://github.com/iVis-at-Bilkent/newt/issues/498). Also, we created a new issue adressing the manual modifications to the provided SBGN-ML version 0.2 main file to make it exchangeable to inform the developers of Newt editor (https://github.com/iVis-at-Bilkent/newt/issues/679).
+\subsection*{Meaning and generalizability of the study}
+The results of this study might be of great importance for future studies in systems medicine and biology by providing the authors with a protocol and guideline to create and validate \ac{combine} archives on their own. The provision of these archives might serve as a good quality indicator for journals and readers as they meet accepted standards and guidelines in the field such as FAIR \cite{wilkinson2016fair} and \hyperlink{http://co.mbine.org/}{COMBINE}. Furthermore, enhancing the accessibility and re-use of published research is beneficial for authors to increase their visibility and citations. Yet, due to the limited number of included studies (\textit{n} = 1), generalizability of this work might be limited and we propose to conduce further research in this area.
 
-An interesting field for future projects is definitely the integration of semantic annotations and functional aspects of the model into the SBGN map, with promising publications and reports from the community. As the approach in [2] to automatically create a first draft of SBGN was not suitable for the existing SBML files of the Bachmann model in our project, development of a guideline for modification of the SBML file to improve automated creation of SBGN would be very helpful.
+\subsection*{Unanswered and new questions}
+As a result of this project, we built a fully-featured COMBINE archive ('blood, sweat and tears') of the Bachmann model \cite{bachmannmodel} using the web platform \textit{CombineArchiveWeb}. Yet, some questions remain unsolved at this time:
+
+In case of the provided \acf{sbgn} files, an interesting field for future projects is definitely the integration of semantic annotations and functional aspects of the model into the SBGN map, with promising publications and reports from the community. As the approach presented by Scharm \& Waltemath \cite{combine} to automatically create a first draft of SBGN was not suitable for the existing SBML files of the Bachmann model in our project, development of a guideline for modification of the SBML file to improve automated creation of SBGN would be very helpful.
+
+Another interesting aspect for further studies would be to test and improve our generated \ac{combine} archive in the application Tellurium Notebook, the intuitive GUI front-end version of Tellurium. It was recently developed and shown to facilitate building and reusing models built with community standards \cite{choi2018tellurium}. It enables the user to directly load \ac{combine} archives, embed them in a human-readable representation and to test models under variety of conditions. In this regard, a \hyperref[https://github.com/0u812/tellurium-combine-archive-test-cases]{GitHub repository} created by on of the authors contains several \ac{combine} archives as test cases.
+
+Our finding that several plots could not be reproduced due to lacking parameters is in line with a current study, confirming that lacking parameters is the most common reason for failure to reproduce models \cite{tiwari2021reproducibility}. The authors conclude that "\textit{about half of the examined models cannot be reproduced using the information provided in the manuscript}" \cite{tiwari2021reproducibility} and propose the use of a "\textbf{Reproducibility scorecard}" (see \textbf{Table 2} including standards such as \ac{combine} archives, SED-ML and SBML.
+
+Finally, the co-working environment in a GitHub appeared to be very easy to use and understand throughout the whole project team. We therefore conclude that a publicly available documentation of scientific collaboration and the development of repositories, code and archives can be facilitating \ac{fair} handling of research both in the process of making as well as in the handling of results itself.
+The authors suggest that, given the easy to access and freely available software tools, more researchers will take the effort to share their work in a traceable and reusable manner. Also in the context of corporate class work our results indicate a high potential to form a precedent for future development of \ac{fair} research output.
+
+\pagebreak
+
