--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -248,3 +248,46 @@
   doi          = {10.5281/zenodo.5543360},
   %url          = {https://doi.org/10.5281/zenodo.5543360}
 }
+
+@article{van2012software,
+  title={Software support for SBGN maps: SBGN-ML and LibSBGN},
+  author={Van Iersel, Martijn P and Vill{\'e}ger, Alice C and Czauderna, Tobias and Boyd, Sarah E and Bergmann, Frank T and Luna, Augustin and Demir, Emek and Sorokin, Anatoly and Dogrusoz, Ugur and Matsuoka, Yukiko and others},
+  journal={Bioinformatics},
+  volume={28},
+  number={15},
+  pages={2016--2021},
+  year={2012},
+  publisher={Oxford University Press}
+}
+
+@article{wilkinson2016fair,
+  title={The FAIR Guiding Principles for scientific data management and stewardship},
+  author={Wilkinson, Mark D and Dumontier, Michel and Aalbersberg, IJsbrand Jan and Appleton, Gabrielle and Axton, Myles and Baak, Arie and Blomberg, Niklas and Boiten, Jan-Willem and da Silva Santos, Luiz Bonino and Bourne, Philip E and others},
+  journal={Scientific data},
+  volume={3},
+  number={1},
+  pages={1--9},
+  year={2016},
+  publisher={Nature Publishing Group}
+}
+
+@article{calzone2007dynamical,
+  title={Dynamical modeling of syncytial mitotic cycles in Drosophila embryos},
+  author={Calzone, Laurence and Thieffry, Denis and Tyson, John J and Novak, Bela},
+  journal={Molecular systems biology},
+  volume={3},
+  number={1},
+  pages={131},
+  year={2007},
+  publisher={John Wiley \& Sons, Ltd Chichester, UK}
+}
+
+@article{choi2018tellurium,
+  title={Tellurium: an extensible python-based modeling environment for systems and synthetic biology},
+  author={Choi, Kiri and Medley, J Kyle and K{\"o}nig, Matthias and Stocking, Kaylene and Smith, Lucian and Gu, Stanley and Sauro, Herbert M},
+  journal={Biosystems},
+  volume={171},
+  pages={74--79},
+  year={2018},
+  publisher={Elsevier}
+}
