--- a/main.tex
+++ b/main.tex
@@ -45,11 +45,13 @@
 \input{3results}
 \input{31discussion}
 \input{4conclusions}
+\\
 
-\noindent\small \textbf{Authors' contribution:} The authors contributed equally to this work. \\ 
+
+\noindent\small \textbf{Authors' contribution:} All authors have drafted the first version of the manuscript. O.H., A.H.H. and F.H. wrote the final version of the manuscript. All authors have approved this final version. \\ 
 \noindent\small \textbf{Competing interests:} The authors declare no competing interests.\\
 \noindent\small \textbf{Funding:} None.\\
-\noindent\small \textbf{Acknowledgments:} The authors thank Dagmar Walthemath \orcidlink{0000-0002-5886-5563} and Martin Boeker \orcidlink{0000-0003-2972-2042} for mentoring the genesis of this work.
+\noindent\small \textbf{Acknowledgments:} The authors thank Dagmar Walthemath \orcidlink{0000-0002-5886-5563} for initiating and supervising the process of generating the \ac{combine} archive and Martin Boeker \orcidlink{0000-0003-2972-2042} for mentoring the writing process of this manuscript.
 
 \input{5abbreviation}
 
