--- a/3results.tex
+++ b/3results.tex
@@ -7,40 +7,27 @@ We found three models on BioModels. The first model, \hyperlink{https://www.ebi.
 The models provided in JWS Online do not have any date of building or update, so it was not possible to know when these were built. The first model in JWS online, \hyperlink{https://jjj.bio.vu.nl/models/bachmann/sbml/?download=1}{'bachmann.xml'}, is from \textit{Mus musculus} and represents the STAT's pathway in a cell simulation \textit{in silico}. The second model, \hyperlink{https://jjj.bio.vu.nl/models/bachmann2/sbml/?download=1}{'bachmann2.xml'}, was obtained from the BioModels database (BioModels ID: BIOMD0000000347).
 
 \subsection*{\acf{sbgn} results}
-Figurative representation of data is a key factor to the rapid perception of information from it. The provision of the graphical representation of a model in a standardized, unambiguous form fosters the reusability and exchangeability of the model. The publication of the Bachmann model contains a process diagram of the model, which not uses a standard graphical notation.
+Figurative representation of data is a key factor to the rapid perception of information from it. The provision of the graphical representation of a model in a standardized, unambiguous form fosters the reusability and exchangeability of the model. The publication of the Bachmann model contains a process diagram of the model, which not uses a standard graphical notation \cite{bachmannmodel}.
 
 Since no off-the-shelf standardised graphical representation could be found, we decided to create our own \ac{sbgn} map from scratch. Based on the authors´ diagram choice in the publication and the suggestions of Le Novère \textit{et al.} \cite{sbgnnovere} and Touré \textit{et al.} \cite{sbgntoure} we chose the \ac{pd} language for our \ac{combine} archive. Following the selection of the \ac{sbgn} language, we identified several useful tools and ultimately created the \ac{pd} map with 'Newt Editor'. 
 
-To confirm the validity of the developed \ac{sbgn} we used the integrated LibSBGN-based validation feature of 'Newt Editor' as well as imported the \ac{sbgnml} into \acs{vanted}/\acs{sbgn}-ED, Krayon for \ac{sbgn} and SBGNViz. \textbf{Figure 1} shows the visually improved map after cleaning it up and colouring the most important features of the model.
+To check the validity and integrity of the drafted \ac{sbgn}, we first used the semantic validation feature of Newt. This feature is based on the \hyperref[https://github.com/sbgn/libsbgn]{LibSBGN javascript library}\cite{van2012software}. Furthermore, we imported the \ac{sbgnml} into different tools to ensure the interoperability: \acs{vanted}/\acs{sbgn}-ED, Krayon for \ac{sbgn} and SBGNViz. Except from some minimal errors not adversely affecting the biological correct representation, our SBGN map was reproducible and editable in three different tools using the SBGN-ML file created.
+
+Next, we beautified the resulting SBGN map in the Newt editor to ensure the network design was in line with the message and the scientific question it aims to communicate \cite{sbgntoure}.  For this, we decided to keep the comprehensive structure of the SBGN map without further reduction of biological components or reactions to enable readers retracing the complex Ordinary Differential Equation (ODE) model. In order to make the SBGN map visually appealing and improve readability, we manually enhanced and decided to highlight the roles of the two transcriptional negative feedback regulators of the suppressor of cytokine signaling (SOCS) family, CIS and SOCS3, with color (\textbf{Figure 1}). 
+
+We aimed to provide our SBGN model in a variety of formats to allow recurrence on the substitute files when the primary files are not applicable in a specific future application. Finally, we were able to provide different SBGN-ML 0.2 codes as well as a GraphML version of our model. The CellDesigner export did not work and also we failed to provide SBGN-ML 0.3 because we were not able to validate this with at least one other tool than Newt editor. Unfortunately, we were not able to further investigate the platform specific problems with exchange formats in detail as we experienced them, but provide a documentation for the community. During the time of our project, the CellDesigner export from Newt editor is already addressed in the discussion to an existing issue on GitHub (https://github.com/iVis-at-Bilkent/newt/issues/498). Also, we created a new issue addressing the manual modifications to the provided SBGN-ML version 0.2 main file to make it exchangeable to inform the developers of Newt editor (https://github.com/iVis-at-Bilkent/newt/issues/679).
 
 \subsection*{\acf{sedml} results}
 
-\subsubsection*{Selection of a \acs{sedml} Tool}
+Our goal was to create SED-ML files for our \acs{combine} archive to reproduce figures containing modeling data. Four figures in the main text (Figures 3 - 6) and one Supplementary Figure (S9) were selected and (partially) reproduced (see \textbf{Table 1}).
 
-Our search revealed five software tools for the simulation of biological systems:
-\begin{enumerate} 
-    \item \hyperlink{http://copasi.org/}{\textbf{\ac{copasi}}}\\
-    A software application for the simulation and analysis of biochemical networks and their dynamics \cite{copasi}.
-   
-    \item \hyperlink{https://www.systemsmedicine.net/posts/jws-online-biological-systems-modelling}{\textbf{JWS Online}}\\
-    Systems Biology tool for the construction, modification, and simulation of kinetic models and the storage of curated models \cite{jwsonline}. On this repository was one of the found models.
-   
-    \item \hyperlink{https://sed-ml.org/}{\textbf{\ac{swt}}}\\
-    A suite of tools for creating, editing, simulating and validating \ac{sedml} files \cite{sedml}. 
-   
-    \item \hyperlink{https://tellurium.readthedocs.io/en/latest/}{\textbf{Tellurium}}\\
-    A tool to model, simulate and analyze biochemical systems \cite{tellurium}.
-    
-\end{enumerate}
+Initially, we generated a default simulation \ac{sedml} file using \ac{sedml} WebTools and performed an initial simulation. The generated \ac{sedml} file was then used to create a SED-ML file in \ac{copasi} v4.33 (as described by Scharm \& Waltemath \cite{combine}) and reproduced Supplementary Figure 9. The results were stored in our repository. However, \ac{copasi}'s support for \ac{sedml} files, is limited to simulations using only one model. It is often necessary though to combine different model setups in one simulation, e.g. to compare a wild-type and over-expression condition, which was also the case in our study.
 
-\subsubsection*{Generation of \acs{sedml} files}
+Thus, we generated experiment-specific \ac{sedml} files using Tellurium. The detailed documentation to the scripts are provided on our \hyperlink{https://github.com/ahodelin/Bachmann_Archive/wiki/SEDML_Tellurium}{GitHub-Repository}. We generated \ac{sedml} files to reproduce Figure 3A and C, Figure 4, Figure 5A and Supplementary Figure 9. \textbf{Figure 2} exemplary shows the output after running the simulation of the \ac{sedml} file to reproduce Figure 4. Notably, to simulate the overexpression of SOCS3 and CIS, two new models were created based on model1, where the parameters SOCS3oe and CISoe were set to 1 to create model2 and model3, respectively. In addition, the initial concentrations for SOCS3 and CIS were roughly set to maximum values for each molecule based on the plots generated. The plots for pJAK2 and pEPOR could not be reproduced since these parameters are not included in the model.
 
-Following a review of available tools for creating \ac{sedml} files \cite{sedmltool} we decided on two separate approaches. Firstly, we conducted default simulation in \ac{sedml} WebTools as a basis for experiment-specific simulations in \ac{copasi} (as described by Scharm \& Waltemath \cite{combine}). Secondly, we performed experiment-specific simulations in Tellurium, a Python platform for systems biology \cite{tellurium}. Tellurium includes a number of pre-installed Python libraries, plugins and tools for biological modelling and can be used via any Python frontend. We used \ac{colab}, a cloud-based Jupyter notebook service for collaborative Python programming. The detailled documentation to the scripts are provided on our GitHub-Repository.
+Next, the created \ac{sedml} files were successfully validated in \ac{sedml} WebTools and integrated into the \ac{combine} archive. \ac{combine} archive was downloaded and the .omex file was executed using Tellurium for testing purposes. The results were added to the final version of the \ac{combine} archive. Interchangeability between validated \ac{sedml} files was tested by loading individual \ac{sedml} files in \ac{copasi} or \ac{sedml} WebTools. 
 
-\subsubsection*{Simulation results}
-\textbf{Figure X} shows the {\Huge Oli... Figure}
-
-The created \ac{sedml} files were validated in \ac{sedml} WebTools and integrated into the \ac{combine} archive. Subsequently the output files were created by simulating all \ac{sedml} files within the \ac{combine} archive using Tellurium and loading individual \ac{sedml} files in \ac{copasi} or \ac{sedml} WebTools. 
+In summary, we were able to reproduce many, but not all experiments. The specific problems encountered while attempting to reproduce the experiments will be addressed in the next section and separate issues in GitHub were opened for future reference.
 
 
 \subsection*{Unexpected events and observations}
@@ -48,12 +35,12 @@ Interestingly some required parameters to simulate specific experimental conditi
 
 The plots for p\ac{jak}2, pEPOR and tSTAT5 (e.g., Fig3, Fig4) could not be generated since these parameters are missing from the model itself. Information on how to derive these observables from existing model parameters is included in the supplementary material (e.g., Supplementary Information, page 21). 
 
-In contrast to \ac{cis} and \ac{socs}3, the overexpression of SHP1 could not be reproduced since the corresponding parameter (SHP1oe) was not included in the model (nor in any other Bachmann model files available online). We did not modify the model in order to simulate different level of \ac{epo} as described in the paper. While the corresponding figure legends and supplementary material contain some information on \ac{epo} concentrations used for these experiments, it was not clear ho to simulate this in the model.
+In contrast to \ac{cis} and \ac{socs}3, the over-expression of SHP1 could not be reproduced since the corresponding parameter (SHP1oe) was not included in the model (nor in any other Bachmann model files available online). We did not modify the model in order to simulate different level of \ac{epo} as described in the paper. While the corresponding figure legends and supplementary material contain some information on \ac{epo} concentrations used for these experiments, it was not clear ho to simulate this in the model.
 
 Many figures (e.g. Figure 4) contain experimental data in addition to model simulations. Although this data is referenced as supplementary material in the online version of the paper, we did not include this in our plots. The ranges of the y axes do not correspond to the figures in the paper. 
 Several experiments presented in the paper are based on testing a range of \ac{epo} levels. We were not able to reproduce these experiments, because it was not clear how to simulate different \ac{epo} concentrations using the model.
 
-Finally, we uploaded all data from our GitHub repository into the platform \textit{CombineArchiveWeb}, except generated XML files report during the validations, because, the \textit{CombineArchiveWeb} interface launches the error: \textsf{Unknown Error: Cannot upload file}, therefore we created a new ticket-issue in the GitHub repository from the \textit{CombineArchiveWeb} project.
+Finally, we uploaded all data from our GitHub repository into the platform \textit{CombineArchiveWeb}, except generated XML file reports since the \textit{CombineArchiveWeb} interface launches the error: \textsf{Unknown Error: Cannot upload file}. Therefore, we created a new ticket-issue in the GitHub repository from the \textit{CombineArchiveWeb} project.
 
 \subsection*{Reproducibility}
 As mentioned in the results section there have been some flaws in the reproducibility due to missing data given in the original work \cite{bachmannmodel}. Nevertheless at the end of our project, we could build a fully-featured \ac{combine} archive and integrate the generated files, reports and pictures of the Bachmann model in the web platform CombineArchiveWeb.
