--- a/4conclusions.tex
+++ b/4conclusions.tex
@@ -1,15 +1,2 @@
-\section*{Conclusions and Future work}
-
-In summary, in this case study we were able to reproduce a systems biology simulation model by Bachmann \textit{et al.} \cite{bachmannmodel} and add the necessary annotation to create a fully-featured \ac{combine} archive. This sprint collaboration was conducted in an agile environment using GuitHub that appeared to be a easy to use environment for team members of different experience to that tool. A fully publicly traceable documentation of the development and a reproducible simulation archive could be achieved in the context of a collaboratory educational sprint.
-
-%\subsection*{Relation to existing evidence}
-
-\subsection*{Limitations}
-Several parameters required to reproduce the full extend of individual plots were not included in the original data itself and therefor could not be reproduced.  Given sthe sprint character of this collaboration we were not able to to added the missing data manually based on details provided in the supplementary material. 
-Also some technical issues hindered a barrier-free assembly of the archive. The \textit{CobineArchiveWeb} interface did not allow the XML reports from the validations to be be uploaded. Furthermore \ac{copasi} is limited in its functionality to support simulations working with more than one model. As this functionality is needed in our project to run simulations in the wildtype and overexpression conditions in parallel we changed our procedure and ultimately built and simulated \ac{sedml} files using Tellurium.
-
-
-\subsection*{Future work}
-The co-working environment in a GitHub appeared to be very easy to use and understand throughout the whole project team. We therefore conclude that a publicly available documentation of scientific collaboration and the development of repositories, code and archives can be facilitating \ac{fair} handling of research both in the process of making as well as in the handling of results itself.
-The authors suggest that, given the easy to access and freely available software tools, more researchers will take the effort to share their work in a traceable and reusable manner. Also in the context of corporate class work our results indicate a high potential to form a precedent for future development of \ac{fair} research output.
-\pagebreak
+\section*{Conclusions}
+It is of evident importance for systems and synthetic biology to create reproducible models. In this case study, we reproduced large parts of a dynamic pathway model of JAK/STAT5 signaling \cite{bachmannmodel} by creating fully-featured \ac{combine} archive. This study was performed in an agile working environment and made available on \hyperlink{https://github.com/ahodelin/Bachmann_Archive}{GitHub}, ensuring a fully publicly traceable documentation of the work process. The provided \ac{combine} archive might serve as example for future efforts to increase reproducibility of studies in systems and synthetic biology and educational purposes. However, we were not able to reproduce all results of the investigated model, mostly due to the limited project time and the lack of parameters in the model description. Therefore, further communication with the authors will likely be needed. 
