some corrections in links

--- a/31discussion.tex
+++ b/31discussion.tex
@@ -18,7 +18,7 @@ As a result of this project, we built a fully-featured COMBINE archive ('blood, 
 
 In case of the provided \acf{sbgn} files, an interesting field for future projects is definitely the integration of semantic annotations and functional aspects of the model into the SBGN map, with promising publications and reports from the community. As the approach presented by Scharm \& Waltemath \cite{combine} to automatically create a first draft of SBGN was not suitable for the existing SBML files of the Bachmann model in our project, development of a guideline for modification of the SBML file to improve automated creation of SBGN would be very helpful.
 
-Another interesting aspect for further studies would be to test and improve our generated \ac{combine} archive in the application Tellurium Notebook, the intuitive GUI front-end version of Tellurium. It was recently developed and shown to facilitate building and reusing models built with community standards \cite{choi2018tellurium}. It enables the user to directly load \ac{combine} archives, embed them in a human-readable representation and to test models under variety of conditions. In this regard, a \hyperref[https://github.com/0u812/tellurium-combine-archive-test-cases]{GitHub repository} created by on of the authors contains several \ac{combine} archives as test cases.
+Another interesting aspect for further studies would be to test and improve our generated \ac{combine} archive in the application Tellurium Notebook, the intuitive GUI front-end version of Tellurium. It was recently developed and shown to facilitate building and reusing models built with community standards \cite{choi2018tellurium}. It enables the user to directly load \ac{combine} archives, embed them in a human-readable representation and to test models under variety of conditions. In this regard \hyperlink{https://github.com/0u812/tellurium-combine-archive-test-cases}{'tellurium-combine-archive-test-cases'}, a GitHub repository created by on of the authors contains several \ac{combine} archives as test cases.
 
 Our finding that several plots could not be reproduced due to lacking parameters is in line with a current study, confirming that lacking parameters is the most common reason for failure to reproduce models \cite{tiwari2021reproducibility}. The authors conclude that "\textit{about half of the examined models cannot be reproduced using the information provided in the manuscript}" \cite{tiwari2021reproducibility} and propose the use of a "\textbf{Reproducibility scorecard}" (see \textbf{Table 2} including standards such as \ac{combine} archives, SED-ML and SBML.
 
