--- a/3results.tex
+++ b/3results.tex
@@ -11,7 +11,7 @@ Figurative representation of data is a key factor to the rapid perception of inf
 
 Since no off-the-shelf standardised graphical representation could be found, we decided to create our own \ac{sbgn} map from scratch. Based on the authors´ diagram choice in the publication and the suggestions of Le Novère \textit{et al.} \cite{sbgnnovere} and Touré \textit{et al.} \cite{sbgntoure} we chose the \ac{pd} language for our \ac{combine} archive. Following the selection of the \ac{sbgn} language, we identified several useful tools and ultimately created the \ac{pd} map with 'Newt Editor'. 
 
-To check the validity and integrity of the drafted \ac{sbgn}, we first used the semantic validation feature of Newt. This feature is based on the \hyperref[https://github.com/sbgn/libsbgn]{LibSBGN javascript library}\cite{van2012software}. Furthermore, we imported the \ac{sbgnml} into different tools to ensure the interoperability: \acs{vanted}/\acs{sbgn}-ED, Krayon for \ac{sbgn} and SBGNViz. Except from some minimal errors not adversely affecting the biological correct representation, our SBGN map was reproducible and editable in three different tools using the SBGN-ML file created.
+To check the validity and integrity of the drafted \ac{sbgn}, we first used the semantic validation feature of Newt. This feature is based on the \hyperlink{https://github.com/sbgn/libsbgn}{LibSBGN javascript library}\cite{van2012software}. Furthermore, we imported the \ac{sbgnml} into different tools to ensure the interoperability: \acs{vanted}/\acs{sbgn}-ED, Krayon for \ac{sbgn} and SBGNViz. Except from some minimal errors not adversely affecting the biological correct representation, our SBGN map was reproducible and editable in three different tools using the SBGN-ML file created.
 
 Next, we beautified the resulting SBGN map in the Newt editor to ensure the network design was in line with the message and the scientific question it aims to communicate \cite{sbgntoure}.  For this, we decided to keep the comprehensive structure of the SBGN map without further reduction of biological components or reactions to enable readers retracing the complex Ordinary Differential Equation (ODE) model. In order to make the SBGN map visually appealing and improve readability, we manually enhanced and decided to highlight the roles of the two transcriptional negative feedback regulators of the suppressor of cytokine signaling (SOCS) family, CIS and SOCS3, with color (\textbf{Figure 1}). 
 
