- Some Abbreviations added - New order and name of tex files - Added tables and figures in appendices as supplementary materials

--- a/1introduction.tex
+++ b/1introduction.tex
@@ -1,15 +1,15 @@
 \section*{Introduction}
 
 \subsection*{Scientific background}
-Reproducibility of results is one of the most fundamental requirements for credibility in scientifc research \cite{tiwari2021reproducibility}. However, in recent years it became evident that a substantial part of study results are not reproducible. A recent systematic review found that almost 50\% of modeling studies could not be reproduced \cite{tiwari2021reproducibility}. Especially in systems biology and systems medicine, the increase in size and complexity of models and data-sets proposes new challenges to share reproducible results. Therefore, several initiatives such as the \hyperlink{https://www.go-fair.org/go-fair-initiative/}{Go FAIR Initiative},  \hyperlink{https://fair-dom.org/}{FAIDROM} or \hyperlink{http://co.mbine.org/}{COMBINE} were formed aiming to develop and provide standardization efforts and tools to enhance reproducibility in systems biology \cite{specificationsb}. 
+Reproducibility of results is one of the most fundamental requirements for credibility in scientifc research \cite{tiwari2021reproducibility}. However, in recent years it became evident that a substantial part of study results are not reproducible. A recent systematic review found that almost 50\% of modeling studies could not be reproduced \cite{tiwari2021reproducibility}. Especially in systems biology and systems medicine, the increase in size and complexity of models and data-sets proposes new challenges to share reproducible results. Therefore, several initiatives such as the \hyperlink{https://www.go-fair.org/go-fair-initiative/}{Go \acs{fair} Initiative},  \hyperlink{https://fair-dom.org/}{FAIDROM} or \hyperlink{http://co.mbine.org/}{COMBINE} were formed aiming to develop and provide standardization efforts and tools to enhance reproducibility in systems biology \cite{specificationsb}. 
 
 One of these tools are so called \ac{combine} archives, which aim to improve the coordination of standard formats for several features of simulation studies, such as \ac{sbml}, CellML, \ac{sbgn}, and \ac{sbrml}. These standards aim to encode, simulate and visualize biological models \cite{combine}. Furthermore, \ac{combine} archives offer the unique opportunity to not only reproduce simulation results but also to access comprehensive metadata such as author information, publication IDs (e.g. \ac{doi}) and simulation details in one single file. The vast majority of this information is usually stored in different data formats and locations that require a bundle of software tools to handle. \ac{combine} archives instead bring a single executable file, which is easy to access and comes with proper provenience information. It is obvious that this creates a much higher accessibility to complex systems medicine and systems biology data for researchers and provides a better reproducibility of scientific results.
 
 \subsection*{Rationale for this study}
 \subsubsection*{Dyamic Pathway Simulations}
-Dynamic pathway modeling is needed to describe the complex regulatory system of feedback regulators, to answer this question, Bachmann \textit{et al.} built a dual negative feedback model of JAK2/STAT5 signaling in primary erythroid progenitor cells isolated from mouse fetal livers \cite{bachmannmodel}.
+Dynamic pathway modeling is needed to describe the complex regulatory system of feedback regulators, to answer this question, Bachmann \textit{et al.} built a dual negative feedback model of \ac{jak}2/\ac{stat}5 signaling in primary erythroid progenitor cells isolated from mouse fetal livers \cite{bachmannmodel}.
 
-Given the background of the only partially reproducible dynamic pathway model of \ac{socs} family members in JAK2/STAT5 signaling from Bachmann \textit{et al.} \cite{bachmannmodel}, we were asked to create a fully featured \ac{combine} archive and reproduce the simulation content, both for educational purposes and for scientific completion of the original work. Furthermore, the created \ac{combine} Archive could serve as a template to enhance reproducibility of future modelling studies.
+Given the background of the only partially reproducible dynamic pathway model of \ac{socs} family members in \ac{jak}2/\ac{stat}5 signaling from Bachmann \textit{et al.} \cite{bachmannmodel}, we were asked to create a fully featured \ac{combine} archive and reproduce the simulation content, both for educational purposes and for scientific completion of the original work. Furthermore, the created \ac{combine} Archive could serve as a template to enhance reproducibility of future modelling studies.
 
 \subsubsection*{Agile working}
 Agile working has been a major drive for the evolution of working environment especially in information technologies. New definitions on how, where, with whom and when collaboration and the completion of tasks is done are enabled by digital cloud solutions and co-working platforms that integrate the allocation of tasks, versioning of content and the \textit{ad-hoc}-formation of teams. GitHub as a provider of internet-hosted software development and version control tools has been used as an essential common platform for managing software projects and supporting collaborative development. Lately some educational projects have begun to adopt it for hosting and managing course content to enhance transparency features in the creation, reuse, and remix of materials \cite{github, Knegendorf.}. In the development of this \ac{combine} archive we dedicated ourselves to the \acs{fair}-principles and therefore built a completely publicly traceable working environment in GitHub, that can be accessed via the link given in the appendices.
