--- a/6abbreviation.tex
+++ b/6abbreviation.tex
@@ -25,14 +25,22 @@
         
         \acro{fair}[FAIR]{Findable, Accessible, Interoperable, Reusable}
         
-        \acro{jak}[JAK]{Janus kinase}
+        \acro{gui}[GUI]{Graphical User Interface}
         
+        \acro{jak}[JAK]{Janus kinase}
         
         \acro{mii}[MII]{Medical Informatics Initiative}
         
         \acro{miracum}[MIRACUM]{Medical Informatics for Research and Care in University
 Medicine}
+
+        \acro{ode}[ODE]{Ordinary Differential Equation}
+
         \acro{pd}[PD]{Process Description}
+        
+        \acro{pepor}[pEpoR]{phosphorylated Erythropoietin receptor}
+        
+        \acro{pjak}[pJAK]{phosphorylated Janus kinase}
         
         \acro{sedml}[SED-ML]{Simulation Experiment Description Markup Language}
         
@@ -45,6 +53,8 @@ Medicine}
         \acro{sbrml}[SBRML]{Systems Biology Result Markup Language}
         
         \acro{socs}[SOCS]{suppressor of cytokine}
+        
+        \acro{shp1}[SHP1]{Src homology region 2 (SH-2) domain-containing phosphatase 1}
         
         \acro{stat}[STAT]{signal transducer and activator of transcription protein}        
                 
