--- a/3results.tex
+++ b/3results.tex
@@ -33,7 +33,7 @@ In summary, we were able to reproduce many, but not all experiments. The specifi
 \subsection*{Unexpected events and observations}
 Interestingly some required parameters to simulate specific experimental conditions were not included in the model. That way some model outputs are defined by observation functions that were not included as parameters in the model itself. 
 
-The plots for \ac{pjak}2, \ac{pepor} and t\ac{stat}5 (e.g., Fig3, Fig4) could not be generated since these parameters are missing from the model itself. Information on how to derive these observables from existing model parameters is included in the supplementary material (e.g., Supplementary Information, page 21). 
+The plots for \ac{pjak}2, \ac{pepor} and t\ac{stat}5 (e.g., Fig3, Fig4) could not be generated since these parameters are missing from the model itself. Information on how to derive these observables from existing model parameters is included in the supplementary material of the original study (e.g., Supplementary Information, page 21). 
 
 In contrast to \ac{cis} and \ac{socs}3, the over-expression of \ac{shp1} could not be reproduced since the corresponding parameter (SHP1oe) was not included in the model (nor in any other Bachmann model files available online). We did not modify the model in order to simulate different level of \ac{epo} as described in the paper. While the corresponding figure legends and supplementary material contain some information on \ac{epo} concentrations used for these experiments, it was not clear ho to simulate this in the model.
 
