--- a/7appendices.tex
+++ b/7appendices.tex
@@ -18,5 +18,5 @@ The fully featured \ac{combine} Archive of our project is available here: \url{h
         \item Reproducibility Score Card
     \end{itemize}
     \item Figure 1: \ac{sbgn} map 
-    \item Figure 2: Reproducibility of Fig. 4 made by Tellurium
+    \item Figure 2: Reproduction of Fig. 4 made by Tellurium
 \end{enumerate}
