Named Table 1 and Table 2 in supplementary materials

--- a/7appendices.tex
+++ b/7appendices.tex
@@ -12,11 +12,8 @@ The fully featured \ac{combine} Archive of our project is available here: \url{h
 
 \subsection*{Supplementary materials}
 \begin{enumerate}
-    \item Table 1: Selection of experiments and reproducibility Score Card
-    \begin{itemize}
-        \item Experiment Selection
-        \item Reproducibility Score Card
-    \end{itemize}
+    \item Table 1: Selection of experiments for reproduction
+    \item Table 2: Reproducibility Score Card from \cite{tiwari2021reproducibility}
     \item Figure 1: \ac{sbgn} map 
     \item Figure 2: Reproduction of Fig. 4 made by Tellurium
 \end{enumerate}
