Updates from Overleaf

--- a/2methods.tex
+++ b/2methods.tex
@@ -33,7 +33,7 @@ The simulation descriptions to reproduce selected experiments from Bachmann \tex
 the recently published Minimum Information about a Simulation Experiment \ac{MIASE} guidelines (computer-readable exchange format, provision of XML schema). 
 
 An overview of existing tools to generate \ac{sedml} files was obtained from the \hyperlink{http://sed-ml.org/}{\acs{sedml} website}, including a brief description and information on supported model languages. Based on this overview as well as previous experience, we decided to test several different tools in order to create, edit and export \ac{sedml} files for specific experiments using the selected \ac{sbml} model. 
-Initially, we followed the steps taken by Scharm \& Waltemath \cite{combine} to generate a default simulation using \hyperlink{http://sysbioapps.spdns.org/SED-ML_Web_Tools}{\acs{sedml} WebTools Version 2.4} and modified this for a specific experiment in \hyperlink{http://copasi.org/}{\ac{copasi}} v.4.33.246 \cite{copasi}. However, given the type of plots to be created, we eventually decided to generate experiment-speficifc \ac{sedml} files with Tellurium v2.2.0 \cite{tellurium} in order to reproduce the experiments presented by Bachmann \textit{et al.} \cite{bachmannmodel}. We used \hyperlink{https://colab.research.google.com/notebooks/welcome.ipynb}{\ac{colab}}, a cloud-based Jupyter notebook service for collaborative Python programming and loaded our scripts to our GitHub repository. Next, the created \ac{sedml} files were validated using \ac{sedml} WebTools. Finally, all ac{sedml} files (including the associated Colab notebooks, output files (plots and tables) and validation results) were integrated into the \ac{combine} archive.
+Initially, we followed the steps taken by Scharm \& Waltemath \cite{combine} to generate a default simulation using \hyperlink{http://sysbioapps.spdns.org/SED-ML_Web_Tools}{\acs{sedml} WebTools Version 2.4} and modified this for a specific experiment in \hyperlink{http://copasi.org/}{\ac{copasi}} v.4.33.246 \cite{copasi}. However, given the type of plots to be created, we eventually decided to generate experiment-speficifc \ac{sedml} files with Tellurium v2.2.0 \cite{tellurium} in order to reproduce the experiments presented by Bachmann \textit{et al.} \cite{bachmannmodel}. We used \hyperlink{https://colab.research.google.com/notebooks/welcome.ipynb}{\ac{colab}}, a cloud-based Jupyter notebook service for collaborative Python programming and loaded our scripts to our GitHub repository. Next, the created \ac{sedml} files were validated using \ac{sedml} WebTools. Finally, all \ac{sedml} files (including the associated Colab notebooks, output files (plots and tables) and validation results) were integrated into the \ac{combine} archive.
 
 \subsection*{Assembly of the \acs{combine} archive}
 
